🥸🍩 Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <!-- specifies the width of the card-->
       <div class="cardError">
         <h3>Message Alert</h3>
-        <p id="networkError" class="center">Not connected.</p>
+        <p id="networkError" class="center">Your data has been leaked.</p>
         <hr />
         <button id="button-network" class="buttonNetwork">Retry</button>
       </div>
@@ -86,18 +86,18 @@
       <div class="columnL">
         <!-- specifies the width of the card-->
         <div class="cardNotes">
-          <p>text text</p>
+          <p>sometimes i think about you.</p>
           <br />
           <!--inserts a line break -->
-          <p>write something</p>
+          <p>i know that i shouldn't,</p>
           <br />
-          <p>write something</p>
+          <p>but i still do.</p>
           <br />
-          <p>🧩🤾🤿🌄🌠💎🧿🪅❗🏴‍☠️</p>
+          <p>i miss you.</p>
           <br />
           <p>
             <img
-              src="https://cdn.glitch.global/8789d4c5-b724-48c7-931f-f33ca033f9dd/swift.gif?v=1705898133961"
+              src="https://cdn.pixabay.com/photo/2020/06/15/17/35/forget-me-nots-5302712_1280.jpg"
             />
           </p>
         </div>
